--- a/packaged.yaml
+++ b/packaged.yaml
@@ -10,7 +10,7 @@ Metadata:
     Description: A toolkit for auto ops in AWS.
     Author: whuaning
     SpdxLicenseId: Apache-2.0
-    ReadmeUrl: s3://<your S3 bucket>/AutoOps/8bcffc30d2cb495886190c400aef88b2
+    ReadmeUrl: s3://597377428377/AutoOps/8bcffc30d2cb495886190c400aef88b2
     Labels:
     - tests
     SemanticVersion: 0.0.1
@@ -19,7 +19,7 @@ Resources:
     Type: AWS::Serverless::StateMachine
     Properties:
       DefinitionUri:
-        Bucket: <your S3 bucket>
+        Bucket: 597377428377
         Key: AutoOps/a609be2a47f42a79335713490c4b9961
       DefinitionSubstitutions:
         GetVolumeDetailsFunctionArn:
@@ -97,11 +97,12 @@ Resources:
       - LambdaInvokePolicy:
           FunctionName:
             Ref: GrowWindowsNtfsFunction
+      Type: EXPRESS
   EC2AlarmCreatingStateMachine:
     Type: AWS::Serverless::StateMachine
     Properties:
       DefinitionUri:
-        Bucket: <your S3 bucket>
+        Bucket: 597377428377
         Key: AutoOps/64df633e086b206e037508978fdc4353
       DefinitionSubstitutions:
         GetInstanceDetailFunctionArn:
@@ -160,143 +161,131 @@ Resources:
   GetVolumeDetailsFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: GetVolumeDetails
       Handler: app.lambda_handler
       Runtime: python3.8
       Description: ''
       MemorySize: 128
       Timeout: 30
-      CodeUri: s3://<your S3 bucket>/AutoOps/ff250e8b078b090975dc1db311009332
+      CodeUri: s3://597377428377/AutoOps/ff250e8b078b090975dc1db311009332
       Policies:
       - AmazonEC2ReadOnlyAccess
   ModifyVolumeSizeFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: ModifyVolumeSize
       Handler: app.lambda_handler
       Runtime: python3.8
       Description: ''
       MemorySize: 128
       Timeout: 30
-      CodeUri: s3://<your S3 bucket>/AutoOps/51f4a4e796be44c0ae06a724171b024e
+      CodeUri: s3://597377428377/AutoOps/51f4a4e796be44c0ae06a724171b024e
       Policies:
       - AmazonEC2FullAccess
   GetVolumeIdForLinuxFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: GetVolumeIdForLinux
       Handler: app.lambda_handler
       Runtime: python3.8
       Description: ''
       MemorySize: 128
       Timeout: 30
-      CodeUri: s3://<your S3 bucket>/AutoOps/481be7fbec35cf1b82fca16634f6ce97
+      CodeUri: s3://597377428377/AutoOps/481be7fbec35cf1b82fca16634f6ce97
       Policies:
       - AmazonEC2ReadOnlyAccess
   GetVolumeIdForWindowsFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: GetVolumeIdForWindows
       Handler: app.lambda_handler
       Runtime: python3.8
       Description: ''
       MemorySize: 128
       Timeout: 120
-      CodeUri: s3://<your S3 bucket>/AutoOps/3b987e845b79a090c669ff61139450dc
+      CodeUri: s3://597377428377/AutoOps/3b987e845b79a090c669ff61139450dc
       Policies:
       - AmazonSSMFullAccess
   GetEbsAlarmDetailFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: GetEbsAlarmDetail
       Handler: app.lambda_handler
       Runtime: python3.8
       Description: ''
       MemorySize: 128
       Timeout: 15
-      CodeUri: s3://<your S3 bucket>/AutoOps/8e1bf6f2aa7eb132b93a52c11cb62b5f
+      CodeUri: s3://597377428377/AutoOps/8e1bf6f2aa7eb132b93a52c11cb62b5f
   GrowLinuxXfsFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: GrowLinuxXfs
       Handler: app.lambda_handler
       Runtime: python3.8
       Description: ''
       MemorySize: 128
       Timeout: 15
-      CodeUri: s3://<your S3 bucket>/AutoOps/7b51e8f5f63b3777b3e5749f5f9bb8bf
+      CodeUri: s3://597377428377/AutoOps/7b51e8f5f63b3777b3e5749f5f9bb8bf
       Policies:
       - AmazonSSMFullAccess
   GrowWindowsNtfsFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: GrowWindowsNtfs
       Handler: app.lambda_handler
       Runtime: python3.8
       Description: ''
       MemorySize: 128
       Timeout: 15
-      CodeUri: s3://<your S3 bucket>/AutoOps/71c633bee9febb7307fa4522ae3a1b18
+      CodeUri: s3://597377428377/AutoOps/71c633bee9febb7307fa4522ae3a1b18
       Policies:
       - AmazonSSMFullAccess
   GetInstanceDetailFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: GetInstanceDetail
       Handler: app.lambda_handler
       Runtime: python3.8
       Description: ''
       MemorySize: 128
       Timeout: 15
-      CodeUri: s3://<your S3 bucket>/AutoOps/d8e2ac6c5e52557c7d70ac4b06413c9d
+      CodeUri: s3://597377428377/AutoOps/d8e2ac6c5e52557c7d70ac4b06413c9d
       Policies:
       - AmazonEC2ReadOnlyAccess
   GetWindowsVolumesFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: GetWindowsVolumes
       Handler: app.lambda_handler
       Runtime: python3.8
       Description: ''
       MemorySize: 128
       Timeout: 120
-      CodeUri: s3://<your S3 bucket>/AutoOps/71e1bc9c6170b2b8d8540ad0203d301e
+      CodeUri: s3://597377428377/AutoOps/71e1bc9c6170b2b8d8540ad0203d301e
       Policies:
       - AmazonSSMFullAccess
   GetLinuxVolumesFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: GetLinuxVolumes
       Handler: app.lambda_handler
       Runtime: python3.8
       Description: ''
       MemorySize: 128
       Timeout: 120
-      CodeUri: s3://<your S3 bucket>/AutoOps/3736aba7160936c862385677c9592cd9
+      CodeUri: s3://597377428377/AutoOps/3736aba7160936c862385677c9592cd9
       Policies:
       - AmazonSSMFullAccess
   CreateLinuxDiskAlarmsFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: CreateLinuxDiskAlarms
       Handler: app.lambda_handler
       Runtime: python3.8
       Description: ''
       MemorySize: 128
       Timeout: 120
-      CodeUri: s3://<your S3 bucket>/AutoOps/fe89eb438b5c5b0ba5ce2790768bea50
+      CodeUri: s3://597377428377/AutoOps/fe89eb438b5c5b0ba5ce2790768bea50
       Policies:
       - CloudWatchFullAccess
   CreateWindowsDiskAlarmsFunction:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: CreateWindowsDiskAlarms
       Handler: app.lambda_handler
       Runtime: python3.8
       Description: ''
       MemorySize: 128
       Timeout: 120
-      CodeUri: s3://<your S3 bucket>/AutoOps/a38e3be9ce00b541e544383e8bff11ae
+      CodeUri: s3://597377428377/AutoOps/a38e3be9ce00b541e544383e8bff11ae
       Policies:
       - CloudWatchFullAccess
 Outputs:
@@ -304,10 +293,12 @@ Outputs:
     Description: EBS Autoscaling State machine ARN
     Value:
       Ref: EBSScalingStateMachine
-  EBSScalingStateMachineRoleArn:
+  EC2AlarmCreatingStateMachineArn:
     Description: IAM Role created for EBS Autoscaling State machine based on the specified
       SAM Policy Templates
     Value:
-      Fn::GetAtt:
-      - EBSScalingStateMachineRole
-      - Arn
+      Ref: EC2AlarmCreatingStateMachine
+  APIURL:
+    Description: API URL
+    Value:
+      Ref: ServerlessRestApi
