--- a/template.yaml
+++ b/template.yaml
@@ -11,7 +11,194 @@ Metadata:
     ReadmeUrl: README.md
     Labels: ['tests']
     SemanticVersion: 0.0.1
-Resources: 
+Resources:
+  GetWindowsVolumesDoc:
+    Type: AWS::SSM::Document
+    Properties: 
+      DocumentType: Command
+      Content: >
+        {
+          "schemaVersion": "2.2",
+          "description": "List Disks on Windows Instance",
+          "parameters": {},
+          "mainSteps": [
+            {
+              "action": "aws:runPowerShellScript",
+              "name": "GetWindowsVolumesDoc",
+              "inputs": {
+                "runCommand": [
+                  "function Get-EC2InstanceMetadata {",
+                  "  param([string]$Path)",
+                  "  (Invoke-WebRequest -Uri \"http://169.254.169.254/latest/$Path\" -UseBasicParsing).Content",
+                  "}",
+                  "function Convert-SCSITargetIdToDeviceName {",
+                  "  param([int]$SCSITargetId)",
+                  "  If ($SCSITargetId -eq 0) {",
+                  "    return \"sda1\"",
+                  "  }",
+                  "  $deviceName = \"xvd\"",
+                  "  If ($SCSITargetId -gt 25) {",
+                  "    $deviceName += [char](0x60 + [int]($SCSITargetId / 26))",
+                  "  }",
+                  "  $deviceName += [char](0x61 + $SCSITargetId % 26)",
+                  "  return $deviceName",
+                  "}",
+                  "Try {",
+                  "  $InstanceId = Get-EC2InstanceMetadata \"meta-data/instance-id\"",
+                  "  $AZ = Get-EC2InstanceMetadata \"meta-data/placement/availability-zone\"",
+                  "  $Region = $AZ.Remove($AZ.Length - 1)",
+                  "  $BlockDeviceMappings = (Get-EC2Instance -Region $Region -Instance $InstanceId).Instances.BlockDeviceMappings",
+                  "  $VirtualDeviceMap = @{}",
+                  "  (Get-EC2InstanceMetadata \"meta-data/block-device-mapping\").Split(\"`n\") | ForEach-Object {",
+                  "    $VirtualDevice = $_",
+                  "    $BlockDeviceName = Get-EC2InstanceMetadata \"meta-data/block-device-mapping/$VirtualDevice\"",
+                  "    $VirtualDeviceMap[$BlockDeviceName] = $VirtualDevice",
+                  "    $VirtualDeviceMap[$VirtualDevice] = $BlockDeviceName",
+                  "  }",
+                  "}",
+                  "Catch {",
+                  "  Write-Host \"Could not access the AWS API, therefore, VolumeId is not available. ",
+                  "Verify that you provided your access keys.\" -ForegroundColor Yellow",
+                  "}",
+                  "",
+                  "Get-disk | ForEach-Object {",
+                  "  $DriveLetter = $null",
+                  "  $VolumeName = $null",
+                  "",
+                  "  $DiskDrive = $_",
+                  "  $Disk = $_.Number",
+                  "  $Partitions = $_.NumberOfPartitions",
+                  "  $EbsVolumeID = $_.SerialNumber -replace \"_[^ ]*$\" -replace \"vol\", \"vol-\"",
+                  "  Get-Partition -DiskId $_.Path | ForEach-Object {",
+                  "    if ($_.DriveLetter -ne \"\") {",
+                  "      $DriveLetter = $_.DriveLetter",
+                  "      $VolumeName = (Get-PSDrive | Where-Object {$_.Name -eq $DriveLetter}).Description",
+                  "    }",
+                  "  } ",
+                  "",
+                  "  If ($DiskDrive.path -like \"*PROD_PVDISK*\") {",
+                  "    $BlockDeviceName = Convert-SCSITargetIdToDeviceName((Get-WmiObject -Class Win32_Diskdrive | Where-Object {$_.DeviceID -eq (\"\\\\.\\PHYSICALDRIVE\" + $DiskDrive.Number) }).SCSITargetId)",
+                  "    $BlockDeviceName = \"/dev/\" + $BlockDeviceName",
+                  "    $BlockDevice = $BlockDeviceMappings | Where-Object { $BlockDeviceName -like \"*\"+$_.DeviceName+\"*\" }",
+                  "    $EbsVolumeID = $BlockDevice.Ebs.VolumeId ",
+                  "    $VirtualDevice = If ($VirtualDeviceMap.ContainsKey($BlockDeviceName)) { $VirtualDeviceMap[$BlockDeviceName] } Else { $null }",
+                  "  }",
+                  "  ElseIf ($DiskDrive.path -like \"*PROD_AMAZON_EC2_NVME*\") {",
+                  "    $BlockDeviceName = Get-EC2InstanceMetadata \"meta-data/block-device-mapping/ephemeral$((Get-WmiObject -Class Win32_Diskdrive | Where-Object {$_.DeviceID -eq (\"\\\\.\\PHYSICALDRIVE\"+$DiskDrive.Number) }).SCSIPort - 2)\"",
+                  "    $BlockDevice = $null",
+                  "    $VirtualDevice = If ($VirtualDeviceMap.ContainsKey($BlockDeviceName)) { $VirtualDeviceMap[$BlockDeviceName] } Else { $null }",
+                  "  }",
+                  "  ElseIf ($DiskDrive.path -like \"*PROD_AMAZON*\") {",
+                  "    $BlockDevice = \"\"",
+                  "    $BlockDeviceName = ($BlockDeviceMappings | Where-Object {$_.ebs.VolumeId -eq $EbsVolumeID}).DeviceName",
+                  "    $VirtualDevice = $null",
+                  "  }",
+                  "  Else {",
+                  "    $BlockDeviceName = $null",
+                  "    $BlockDevice = $null",
+                  "    $VirtualDevice = $null",
+                  "  }",
+                  "  New-Object PSObject -Property @{",
+                  "    Disk          = $Disk;",
+                  "    Partitions    = $Partitions;",
+                  "    DriveLetter   = If ($DriveLetter -eq $null) { \"N/A\" } Else { $DriveLetter };",
+                  "    EbsVolumeId   = If ($EbsVolumeID -eq $null) { \"N/A\" } Else { $EbsVolumeID };",
+                  "    Device        = If ($BlockDeviceName -eq $null) { \"N/A\" } Else { $BlockDeviceName };",
+                  "    VirtualDevice = If ($VirtualDevice -eq $null) { \"N/A\" } Else { $VirtualDevice };",
+                  "    VolumeName    = If ($VolumeName -eq $null) { \"N/A\" } Else { $VolumeName };",
+                  "  }",
+                  "} | Sort-Object Disk | Format-Table -AutoSize -Property Disk, Partitions, DriveLetter, EbsVolumeId, Device, VirtualDevice, VolumeName"
+                ]
+              }
+            }
+          ]
+        } 
+  GetLinuxVolumesDoc:
+    Type: AWS::SSM::Document
+    Properties: 
+      DocumentType: Command
+      Content: >
+        {
+          "schemaVersion": "2.2",
+          "description": "List Disks on Linux Instance",
+          "parameters": {},
+          "mainSteps": [
+            {
+              "action": "aws:runShellScript",
+              "name": "GetLinuxVolumes",
+              "inputs": {
+                "runCommand": [
+                  "df -l | grep ^/dev"
+                ]
+              }
+            }
+          ]
+        }
+  GrowLinuxXfsDoc:
+    Type: AWS::SSM::Document
+    Properties: 
+      DocumentType: Command
+      Content: >
+        {
+          "schemaVersion": "2.2",
+          "description": "Command Document Example JSON Template",
+          "parameters": {
+            "DeviceName": {
+              "type": "String",
+              "description": "Device Name ",
+              "default": "/dev/xvda"
+            },
+            "PartitionNum": {
+              "type": "String",
+              "description": "Device Number ",
+              "default": "1"
+            },
+            "MountPoint": {
+              "type": "String",
+              "description": "Mount Point ",
+              "default": "/"
+            }
+          },
+          "mainSteps": [
+            {
+              "action": "aws:runShellScript",
+              "name": "GrowLinuxXfsDoc",
+              "inputs": {
+                "runCommand": [
+                  "growpart {{DeviceName}} {{PartitionNum}}",
+                  "xfs_growfs -d {{MountPoint}}"
+                ]
+              }
+            }
+          ]
+        }
+  GrowWindowsNtfsDoc:
+    Type: AWS::SSM::Document
+    Properties: 
+      DocumentType: Command
+      Content: >
+        {
+          "schemaVersion": "2.2",
+          "description": "Command Document Example JSON Template",
+          "parameters": {
+            "DriveLetter": {
+              "type": "String",
+              "description": "Drive letter to grow",
+              "default": "d"
+            }
+          },
+          "mainSteps": [
+            {
+              "action": "aws:runPowerShellScript",
+              "name": "GrowWindowsNtfsDoc",
+              "inputs": {
+                "runCommand": [
+                  "Resize-Partition -DriveLetter {{DriveLetter}} -Size (Get-PartitionSupportedSize -DriveLetter {{DriveLetter}}).sizemax"
+                ]
+              }
+            }
+          ]
+        } 
   EBSScalingStateMachine:
     Type: AWS::Serverless::StateMachine
     Properties:
@@ -122,6 +309,9 @@ Resources:
       Timeout: 30
       CodeUri: functions/ModifyVolumeSize
       Policies: [AmazonEC2FullAccess]
+      Environment:
+        Variables:
+          SCALING_SIZE: 10
   GetVolumeIdForLinuxFunction:
     Type: 'AWS::Serverless::Function'
     Properties:
@@ -142,6 +332,9 @@ Resources:
       Timeout: 120
       CodeUri: functions/GetVolumeIdForWindows
       Policies: [AmazonSSMFullAccess]
+      Environment:
+        Variables:
+          SSM_DOCNAME: !Ref GetWindowsVolumesDoc
   GetEbsAlarmDetailFunction:
     Type: 'AWS::Serverless::Function'
     Properties:
@@ -161,6 +354,9 @@ Resources:
       Timeout: 15
       CodeUri: functions/GrowLinuxXfs
       Policies: [AmazonSSMFullAccess]
+      Environment:
+        Variables:
+          SSM_DOCNAME: !Ref GrowLinuxXfsDoc
   GrowWindowsNtfsFunction:
     Type: 'AWS::Serverless::Function'
     Properties: 
@@ -171,6 +367,9 @@ Resources:
       Timeout: 15
       CodeUri: functions/GrowWindowsNtfs
       Policies: [AmazonSSMFullAccess]
+      Environment:
+        Variables:
+          SSM_DOCNAME: !Ref GrowWindowsNtfsDoc
   GetInstanceDetailFunction:
     Type: 'AWS::Serverless::Function'
     Properties: 
@@ -191,6 +390,9 @@ Resources:
       Timeout: 120
       CodeUri: functions/GetWindowsVolumes
       Policies: [AmazonSSMFullAccess]
+      Environment:
+        Variables:
+          SSM_DOCNAME: !Ref GetWindowsVolumesDoc
   GetLinuxVolumesFunction:
     Type: 'AWS::Serverless::Function'
     Properties:
@@ -201,6 +403,9 @@ Resources:
       Timeout: 120
       CodeUri: functions/GetLinuxVolumes
       Policies: [AmazonSSMFullAccess]
+      Environment:
+        Variables:
+          SSM_DOCNAME: !Ref GetLinuxVolumesDoc
   CreateLinuxDiskAlarmsFunction:
     Type: 'AWS::Serverless::Function'
     Properties:
@@ -211,6 +416,9 @@ Resources:
       Timeout: 120
       CodeUri: functions/CreateLinuxDiskAlarms
       Policies: [CloudWatchFullAccess]
+      Environment:
+        Variables:
+          USAGE_THRESHOLD: 80
   CreateWindowsDiskAlarmsFunction:
     Type: 'AWS::Serverless::Function'
     Properties:
@@ -220,16 +428,19 @@ Resources:
       MemorySize: 128
       Timeout: 120
       CodeUri: functions/CreateWindowsDiskAlarms
-      Policies: [CloudWatchFullAccess]        
+      Policies: [CloudWatchFullAccess]       
+      Environment:
+        Variables:
+          FREE_THRESHOLD: 20 
 Outputs:
   EBSScalingStateMachineArn:
-    Description: "EBS Autoscaling State machine ARN"
+    Description: "EBS auto-scaling state machine ARN"
     Value: !Ref EBSScalingStateMachine
   EC2AlarmCreatingStateMachineArn:
-    Description: "IAM Role created for EBS Autoscaling State machine based on the specified SAM Policy Templates"
+    Description: "EC2 disk alarm auto-creating state machine ARN"
     Value: !Ref EC2AlarmCreatingStateMachine
   APIEndpoint:
-    Description: "API Endpoint"
+    Description: "APIGateway Endpoint to start start machines' execution"
     Value: !Join ["/", ["https:", "", !Join [".", [!Ref ServerlessRestApi, "execute-api", !Ref AWS::Region, "amazonaws.com"]], !Ref ServerlessRestApiProdStage]]  
 
 
