--- a/packaged.yaml
+++ b/packaged.yaml
@@ -10,9 +10,7 @@ Metadata:
     Description: A toolkit for auto ops in AWS.
     Author: whuaning
     SpdxLicenseId: Apache-2.0
-    ReadmeUrl: s3://<your S3 bucket>/AutoOps/9f20d4c55622446f47c6c9eb139b1a85
-    Labels:
-    - tests
+    ReadmeUrl: s3://<your S3 bucket>/AutoOps/202800a0070dbf43bebd1a5d9d50d8e6
     SemanticVersion: 0.0.1
 Resources:
   GetWindowsVolumesDoc:
@@ -125,7 +123,16 @@ Resources:
         \  \"action\": \"aws:runPowerShellScript\",\n      \"name\": \"GrowWindowsNtfsDoc\"\
         ,\n      \"inputs\": {\n        \"runCommand\": [\n          \"Resize-Partition\
         \ -DriveLetter {{DriveLetter}} -Size (Get-PartitionSupportedSize -DriveLetter\
-        \ {{DriveLetter}}).sizemax\"\n        ]\n      }\n    }\n  ]\n} \n"
+        \ {{DriveLetter}}).sizemax\"\n        ]\n      }\n    }\n  ]\n}\n"
+  AutoOpsApiGateway:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: Prod
+      EndpointConfiguration: PRIVATE
+      Auth:
+        ResourcePolicy:
+          SourceVpcWhitelist:
+          - vpc-0f085c75
   EBSScalingStateMachine:
     Type: AWS::Serverless::StateMachine
     Properties:
@@ -186,6 +193,8 @@ Resources:
           Properties:
             Path: /ebs_scale
             Method: POST
+            RestApiId:
+              Ref: AutoOpsApiGateway
       Policies:
       - LambdaInvokePolicy:
           FunctionName:
@@ -252,6 +261,8 @@ Resources:
           Properties:
             Path: /ec2_alarm_create
             Method: POST
+            RestApiId:
+              Ref: AutoOpsApiGateway
       Policies:
       - LambdaInvokePolicy:
           FunctionName:
@@ -287,7 +298,7 @@ Resources:
       Description: ''
       MemorySize: 128
       Timeout: 30
-      CodeUri: s3://<your S3 bucket>/AutoOps/590da72067ee1fc14ead6c40cc5ea5bf
+      CodeUri: s3://<your S3 bucket>/AutoOps/4aab007bfef01b71325ab1b1568eb55b
       Policies:
       - AmazonEC2FullAccess
       Environment:
@@ -445,8 +456,8 @@ Outputs:
         - ''
         - Fn::Join:
           - .
-          - - Ref: ServerlessRestApi
+          - - Ref: AutoOpsApiGateway
             - execute-api
             - Ref: AWS::Region
             - amazonaws.com
-        - Ref: ServerlessRestApiProdStage
+        - Ref: AutoOpsApiGatewayProdStage
